# simplest_ffmpeg_player

simplest_ffmpeg_player/: CMakeLists.txt  README.md  simplest_ffmpeg_player.cpp
