cmake_minimum_required (VERSION 2.8)
project (simpleFFmpegPlayer)
find_library(AVFormat avformat)
find_library(AVCodec avcodec)
find_library(AVUtil avutil)
find_library(SDL2 SDL2)
find_library(SWSCALE swscale)
add_executable (simpleFFmpegPlayer simplest_ffmpeg_player.cpp)
target_link_libraries(simpleFFmpegPlayer "${AVFormat}" "${AVCodec}" "${AVUtil}" "${SDL2}" "${SWSCALE}")
